--- a/module-1/sml-1-case-study.qmd
+++ b/module-1/sml-1-case-study.qmd
@@ -22,7 +22,7 @@ set.seed(20250706) # so the results are readily reproducible
 
 ### The LASER workflow
 
-Each machine learning "case study" is designed to illustrate how machine learning methods and techniques can be applied to address a research question of interest, create useful data products, and conduct reproducible research. Each case study is structured around a basic analytics workflow modeled after the Data-Intensive Research Workflow from [Learning Analytics Goes to School](#0) (Krumm et al., 2018):
+Each supervised machine learning "case study" is designed to illustrate how supervised machine learning methods and techniques can be applied to address a research question of interest, create useful data products, and conduct reproducible research. Each case study is structured around a basic analytics workflow modeled after the Data-Intensive Research Workflow from [Learning Analytics Goes to School](#0) (Krumm et al., 2018):
 
 ![](https://sbkellogg.github.io/eci-589/unit-1/img/workflow.png){alt="" width="80%"}
 
@@ -317,17 +317,15 @@ The final step in the workflow/process is sharing the results of your analysis w
 
 Now, let's return to our research questions. What did we find? This (especially the supervised machine learning model and its output) is very likely new, and this is meant to elicit initial perceptions, and not the right answer. What did we find for each of your RQs? Add a few thoughts below for each. Focus on what you would communicate about this analysis to a general audience, again, keeping in mind this is based on your very initial interpretations.
 
-### RQ A
+### RQ A - Regression Research Question
 
--   ADD YOUR RESPONSE HERE
+-   YOUR RESPONSE
+-   YOUR RESPONSE
 
--   ADD YOUR RESPONSE HERE
+### RQ B - Supervised Machine Learning Research Question
 
-### RQ
-
--   ADD YOUR RESPONSE HERE
-
--   ADD YOUR RESPONSE HERE
+-   YOUR RESPONSE
+-   YOUR RESPONSE
 
 ### 🧶 Knit & Check ✅
 
